sglang/nimbus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-nimbus-service
  namespace: llm
  labels:
    k8s-app: sglang-nimbus
spec:
  type: LoadBalancer
  ports:
    - port: 30000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    k8s-app: sglang-nimbus
